--- a/main.config
+++ b/main.config
@@ -1,14 +1,14 @@
 #Nhentai.net Configurations;  
 #YOU CAN VIEW THEM BY SEEING COOKIES BY OPENING SITE FIRST IN BROWSER AND 
-#THEN GOING TO DEVLOPER TOOLS OR YOU CAN USE ANY EXTENSION !
+#THEN GOING TO DEVLOPER TOOLS OR YOU CAN USE ANY EXTENSION TO GET IT !
 
 cf_clearance=""
 csrftoken=""
 
 #Download Directory 
 
-DOWNLOAD_DIR=""
-
+DOWNLOAD_DIR="."
+LINKS_PATH="./links.txt"
 
 
 
