Added Feature to choose Custom Name Format  and some fixes

--- a/main.config
+++ b/main.config
@@ -9,7 +9,8 @@ csrftoken=""
 
 DOWNLOAD_DIR="."
 LINKS_PATH="./links.txt"
+FILENAMING="{id} TITLE"
 
-
+#This is Default Filenaming Which Works with LANraragi Plugins ! You can adjust according to your needs.
 
 
