added user agent field

--- a/main.config
+++ b/main.config
@@ -1,16 +1,18 @@
-#Nhentai.net Configurations;  
-#YOU CAN VIEW THEM BY SEEING COOKIES BY OPENING SITE FIRST IN BROWSER AND 
-#THEN GOING TO DEVLOPER TOOLS OR YOU CAN USE ANY EXTENSION TO GET IT !
+# Nhentai.net Configurations;  
+# YOU CAN VIEW THEM BY SEEING COOKIES BY OPENING SITE FIRST IN BROWSER AND 
+# THEN GOING TO DEVLOPER TOOLS OR YOU CAN USE ANY EXTENSION TO GET IT !
 
 cf_clearance=""
 csrftoken=""
 
-#Download Directory 
+# You can get here https://my-user-agent.com/
+USER_AGENT=""
 
+# Download Directory
 DOWNLOAD_DIR="."
 LINKS_PATH="./links.txt"
 FILENAMING="{id} TITLE"
 
-#This is Default Filenaming Which Works with LANraragi Plugins ! You can adjust according to your needs.
+# This is Default Filenaming Which Works with LANraragi Plugins ! You can adjust according to your needs.
 
 
